# bevy_metroidvania_gamejam

./: Cargo.toml
assets/Textures/: Default.ase  NewSpriteSheet.ase  SpriteSheet.ase
assets/Textures/Alchemist/: Mini_Alchemist_Idle.json  Mini_Alchemist_Walk.json
assets/Textures/InProgress/: Alchemist_Idle.ase  Alchemist_Walk.ase  Mini_Alchemist_Begin_Fall.ase  Mini_Alchemist_Fall.ase  Mini_Alchemist_Idle.ase  Mini_Alchemist_Jump.ase  Mini_Alchemist_Walk.ase  Tile.ase  Tile2.ase
assets/Textures/InProgress/MiniAlchemist_Wallclimb/: Mini_Alchemist_Wallfling.ase  Mini_Alchemist_Wallgrab.ase
assets/Textures/InProgress/Weapons/: Sword.ase
assets/Tilemaps/: TileMapMain.ldtk
assets/Tilemaps/TileMapMain/backups/: TileMapMain___2022-03-01__16-43-28.backup.ldtk  TileMapMain___2022-03-01__17-00-25.backup.ldtk  TileMapMain___2022-03-03__16-03-10.backup.ldtk  (+9 more)
src/: animation.rs  arena.rs  general_components.rs  main.rs  physics.rs  player.rs  systems.rs  tools.rs  world.rs
src/animation/: animation_components.rs  animation_systems.rs  mod.rs
src/entities/: player.rs
src/general/: general_components.rs  general_systems.rs  mod.rs  systems.rs  tools.rs
src/non_player/: mod.rs  non_player_components.rs  non_player_prefabs.rs  non_player_systems.rs
src/physics/: mod.rs  physics_components.rs  physics_systems.rs
src/player/: mod.rs  player_components.rs  player_systems.rs
src/ui/: mod.rs  ui_components.rs  ui_systems.rs
src/weapons/: mod.rs  weapon_components.rs  weapon_defaults.rs  weapon_prefabs.rs  weapon_systems.rs
(+60 files in other folders)
