[package]
name = "metroidvania_game_jam_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_prototype_lyon = "0.4.0"
bevy_ecs_ldtk = "0.2.0"
heron = { version = "2.2.0", features = ["2d"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3